// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoPrivVault deposit can be called by whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 84884,
}
`;

exports[`GnoPrivVault mint osToken can mint from not whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 178290,
}
`;
